corpus/cpp/overload/case-02/snapshots/gcc15/dual_sink_structured/render.ci.txt
src/main.cpp:3:49: error: [type_mismatch] invalid conversion from 'const char*' to 'int'
raw : invalid conversion from 'const char*' to 'int'
| src/main.cpp:3:49
| int main() { const char *value = "x"; takes_int(value); }
|                                                 ^

src/main.cpp:1:16: note: [unknown] initializing argument 1 of 'void takes_int(int)'
note: wrapper confidence is low; verify against the preserved raw diagnostics
raw : initializing argument 1 of 'void takes_int(int)'
| src/main.cpp:1:16
| void takes_int(int);
|                ^